Remove masonary from 'Stuff' page and add in CV link.

--- a/stuff.html
+++ b/stuff.html
@@ -66,14 +66,14 @@
   <div class="container mt-5">
 
 
-    <div class="row" data-masonry='{"percentPosition": true }'>
+    <div class="row">
       <div class="col-sm-6 col-lg-4 mb-4">
         <div class="card bg-black card-drop-shadow card-zoom">
           <img src="images/burning-crusade.jpeg" class="card-img-top" alt="World of Warcraft Burning Crusade">
           <div class="card-body">
             <h5 class="card-title text-light">Plunder de Hond Concept</h5>
             <p class="card-text">A concept design for my World of Warcraft Classic Guild's website.</p>
-            <a href="https://spangoss.net/pdh-concept.github.io/" target="_blank" class="stretched-link"></a>
+            <a href="https://spangoss.net/pdh-concept.github.io" target="_blank" class="stretched-link"></a>
           </div>
         </div>
       </div>
@@ -107,7 +107,17 @@
           </div>
         </div>
       </div>
-      <!-- <div class="col-4 mb-4">
+      <div class="col-sm-6 col-lg-4 mb-4">
+        <div class="card bg-black card-drop-shadow card-zoom">
+
+          <div class="card-body">
+            <h5 class="card-title text-light">Curriculum Vitae</h5>
+            <p class="card-text">An out-of-date page I built a to act as an online CV.</p>
+            <a href="http://spangoss.net/mark-branscombe-cv.github.io" class="stretched-link"></a>
+          </div>
+        </div>
+      </div>
+      <!-- <div class="col-sm-6 col-lg-4 mb-4">
         <div class="card bg-black">
           <img src="images/placeholder.png" class="card-img-top" alt="...">
           <div class="card-body">
@@ -116,19 +126,9 @@
             <a href="#" class="stretched-link"></a>
           </div>
         </div>
-      </div>
-      <div class="col-4 mb-4">
-        <div class="card bg-black">
-          <img src="images/placeholder.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title text-light">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="stretched-link"></a>
-          </div>
-        </div>
-      </div>
-    </div>-->
+      </div> -->
     </div>
+  </div>
   </div>
 
   <!-- Footer -->
