--- a/cartwall.html
+++ b/cartwall.html
@@ -5,7 +5,6 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   <!-- Font Awesome CSS -->
@@ -15,16 +14,12 @@
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="images/favicon/favicon.svg">
   <link rel="icon" type="image/png" href="images/favicon/favicon.png">
-
   <!-- Masonary -->
   <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
-
   <title>Cartwall</title>
-
 </head>
 
 <body class="bg-dark text-muted mx-3">
-
   <!-- Navigation -->
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -65,11 +60,10 @@
       </div>
     </nav>
   </header>
-
   <!-- Content -->
   <div class="container mt-5">
-    <h3 class="text-light">The Cartwall <a tabindex="0" class="text-muted float-end" role="button" data-bs-toggle="popover" data-bs-placement="left" data-html="true" data-bs-content="<code>Left-click to play / pause.</code><br><code>Right-click to reset the clip</code>"><i
-          class="fa fa-info-circle"></i></a></h3>
+    <h3 class="text-light">The Cartwall <a tabindex="0" class="text-muted float-end" role="button" data-bs-toggle="popover" data-bs-placement="left" data-html="true"
+        data-bs-content="<code>Left-click to play / pause.</code><br><code>Right-click to reset the clip</code>"><i class="fa fa-info-circle"></i></a></h3>
     <p>My tribute to Shaun Keaveny's Radio 6 Music show.</p>
     <div class="row" data-masonry='{"percentPosition": true }'>
       <div class="col-6 col-sm-3 d-grid mb-4">
@@ -299,23 +293,16 @@
       </div>
     </div>
   </div>
-
   <!-- Footer -->
   <footer class="text-center">
     <p><i class="fa fa-code"></i> Code by Spangoss 2021</p>
   </footer>
-  </div>
-
-
   <!-- Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
-
   <!-- Audio functions-->
   <script src="scripts/cartwall-audio.js"></script>
-
   <!-- Popover Functions -->
   <script src="scripts/popover.js"></script>
-
 </body>
 
 </html>
