--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   <!-- Font Awesome CSS -->
@@ -15,15 +14,11 @@
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="images/favicon/favicon.svg">
   <link rel="icon" type="image/png" href="images/favicon/favicon.png">
-
   <title>Spangoss</title>
-
 </head>
 
 <body class="bg-dark text-muted mx-3">
-
   <div class="container-flex d-flex flex-column min-vh-100">
-
     <!-- Navigation -->
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -64,7 +59,6 @@
         </div>
       </nav>
     </header>
-
     <!-- Hero Section -->
     <div class="container my-auto pb-5 justify-content-center text-center">
       <div class="block">
@@ -75,18 +69,14 @@
         <p class="text-teal-light">The random code doodlings of Mark Branscombe</p>
       </div>
     </div>
-
     <!-- Footer -->
-    <footer class="text-center">
+    <footer class="text-center full-screen-footer">
       <p><i class="fa fa-code"></i> Code by Spangoss 2021</p>
     </footer>
   </div>
   </div>
-
-
   <!-- Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
-
 </body>
 
 </html>
