--- a/cartwall.html
+++ b/cartwall.html
@@ -341,7 +341,7 @@
         <button id="uuuuur-btn" class="btn btn-primary position-relative py-3"
           onclick="playAudio('wurdz-is-hard', 'primary')"
           oncontextmenu="resetAudio('wurdz-is-hard', 'primary');return false;">
-          <h5 id="uuuuur-text">Wurdz is Hard...</h5>
+          <h5 id="uuuuur-text">Wurdz is Hard</h5>
           <h1 class="playback-btn display-6"><i id="wurdz-is-hard-PlaybackState" class="fa"></i></h1>
           <audio id="wurdz-is-hard" onended="audioEnded('wurdz-is-hard', 'primary')">
             <source src="audio/wurdz-is-hard.mp3" type="audio/mpeg">
